fix : add lazy loading while glb models are visible on screen

--- a/src/base/_base.scss
+++ b/src/base/_base.scss
@@ -1,5 +1,6 @@
 body {
   font-family: "Sora", sans-serif;
+  font-display: swap;
   color: #FFFFFF;
 }
 
