--- a/src/components/Services/_services.scss
+++ b/src/components/Services/_services.scss
@@ -12,7 +12,7 @@
   width: 50%;
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: space-around;
   border: 1px solid #484646;
   border-radius: 15px;
   padding: 1em;
